<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#ff4240ff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtWeight"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:hint="@string/hint"
        android:gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radLbToKilo"
            android:id="@+id/radLbToKilo"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radKiloToLb"
            android:id="@+id/radKiloToLb"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvert"
        android:id="@+id/btnConvert"
        android:textSize="25sp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtResults"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_below="@+id/btnConvert"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="62dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAlignment="center" />
</RelativeLayout>
